<resources>
    <string name="app_name">Imagination Station</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="opacity">Opacity</string>
    <string name="save">Save</string>
    <string name="magic">Magic</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>

    <string-array name="profile_type_array">
        <item>Patron</item>
        <item>Artist</item>
    </string-array>
    <string name="action_sign_in_short">Register</string>
    <string name="btn_create_profile">CREATE PROFILE</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_address">Address</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_bio">Bio</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Register now!</string>
    <string name="btn_link_to_login">Already registered. Login!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_update_user_profile">UpdateUserProfileActivity</string>
    <string name="title_home">Home</string>
    <string name="title_canvas">Canvas</string>
    <string name="title_messages">Messages</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="btn_update">Update</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_list_user">ListUser</string>
    <string name="title_activity_messaging">Messaging</string>
    <string name="project_name">Project Name</string>
    <string name="begin">Begin</string>

</resources>
