<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFFFF"
    android:orientation="vertical"
    tools:context=".CanvasActivity">

    <!-- Top Buttons -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/artistName"
            android:layout_width="150dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dip"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:text="Test"
            android:textColor="@color/white"
            android:textSize="20dip"></TextView>

        <ImageButton
            android:id="@+id/edit_btn"
            android:layout_width="40dp"
            android:layout_height="fill_parent"
            android:contentDescription="Edit"
            android:backgroundTint="@color/colorPrimary"
            android:src="@drawable/ic_edit"
            android:tint="@color/white"
            android:layout_toLeftOf="@+id/delete_btn" />

        <ImageButton
            android:id="@+id/delete_btn"
            android:layout_width="40dp"
            android:layout_height="fill_parent"
            android:contentDescription="Delete"
            android:backgroundTint="@color/colorPrimary"
            android:src="@drawable/ic_delete"
            android:tint="@color/white"
            android:layout_toLeftOf="@+id/new_btn" />

        <ImageButton
            android:id="@+id/new_btn"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:layout_toLeftOf="@+id/save_btn"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="@string/start_new"
            android:src="@drawable/ic_new"
            android:tint="@color/white" />

        <ImageButton
            android:id="@+id/save_btn"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:contentDescription="@string/save"
            android:backgroundTint="@color/colorPrimary"
            android:src="@drawable/ic_save"
            android:tint="@color/white"
            android:layout_toLeftOf="@+id/magic_btn" />

        <ImageButton
            android:id="@+id/magic_btn"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:contentDescription="@string/magic"
            android:backgroundTint="@color/colorPrimary"
            android:src="@drawable/magic"
            android:tint="@color/white"
            android:scaleType="fitCenter"
            android:layout_alignParentRight="true" />

    </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <!-- Custom View -->

    <com.example.vinzee.neural_doodle.DrawingView
        android:id="@+id/drawing"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"

        android:layout_weight="1"
        android:background="#FFFFFFFF" />

    <!-- Color Palette -->

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/actionbarT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dip"
        android:gravity="center"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <LinearLayout
        android:id="@+id/paint_colors"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="2dip"
        android:gravity="center">

        <ImageButton
            android:id="@+id/draw_btn"
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:contentDescription="@string/brush"
            android:scaleType="centerInside"
            android:background="@drawable/ic_brush" />

        <ImageButton
            android:id="@+id/erase_btn"
            android:layout_width="58dip"
            android:layout_height="55dip"
            android:contentDescription="@string/erase"
            android:backgroundTint="@color/white"
            android:tint="@color/gray"
            android:scaleType="centerInside"
            android:src="@drawable/eraser" />

        <ImageButton
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:contentDescription="@string/paint"
            android:background="@drawable/ic_color_pallete"
            android:color="#FFFFFFFF"
            android:backgroundTint="#FFFF0000"
            android:tag="#FFFF0000"
            android:onClick="paintClicked" />

        <ImageButton
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:contentDescription="@string/paint"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_color_pallete"
            android:color="#FFFFFFFF"
            android:backgroundTint="#FFFFCC00"
            android:tag="#FFFFCC00"
            android:onClick="paintClicked" />

        <ImageButton
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:contentDescription="@string/paint"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_color_pallete"
            android:color="#FFFFFFFF"
            android:backgroundTint="#FF009900"
            android:tag="#FF009900"
            android:onClick="paintClicked" />

        <ImageButton
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:contentDescription="@string/paint"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_color_pallete"
            android:color="#FFFFFFFF"
            android:backgroundTint="#FF0000FF"
            android:tag="#FF0000FF"
            android:onClick="paintClicked" />
    </LinearLayout>
    </android.support.v7.widget.Toolbar>

</LinearLayout>