<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".SignupActivity">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/user_w_h"
                    android:layout_height="@dimen/user_w_h"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/user"
                    android:id="@+id/profile_image"/>
                <!---->
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/colorAccent"
                    android:textColor="@color/colorAccent"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_address"
                    android:inputType="textPostalAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/colorAccent"
                    android:textColor="@color/colorAccent"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone"
                    android:inputType="phone"
                    android:maxLength="12"
                    android:singleLine="true"
                    android:textColorHint="@color/colorAccent"
                    android:textColor="@color/colorAccent"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:hint="@string/hint_bio"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:minLines="1"
                    android:gravity="top|left"
                    android:maxLines="8"
                    android:textColorHint="@color/colorAccent"
                    android:textColor="@color/colorAccent" />
            </android.support.design.widget.TextInputLayout>

            <!--
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="5">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:textStyle="bold"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:id="@+id/userInterest"
                        android:hint="No Interests selected"/>
                    <Button
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="Select"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:id="@+id/selectInterest"
                        android:background="@drawable/shape"
                        />
                </LinearLayout>

            </android.support.design.widget.TextInputLayout>
            -->

            <Button
                android:id="@+id/update_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/shape"
                android:text="@string/btn_update"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>